--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://bloglist.github.io/Install-in-London-Unvented-Hot-Water-Cylinder/">https://bloglist.github.io/Install-in-London-Unvented-Hot-Water-Cylinder/</a><br>
+                <a target="_bLank" href="https://rowlenheatingplumbing.s3.us-east-005.backblazeb2.com/Install+in+London+Unvented+Hot+Water+Cylinder/index.html">https://rowlenheatingplumbing.s3.us-east-005.backblazeb2.com/Install+in+London+Unvented+Hot+Water+Cylinder/index.html</a><br>
+                <a target="_bLank" href="https://install-in-london-unvented-hot-w-git-7694c7-bloglist1s-projects.vercel.app/">https://install-in-london-unvented-hot-w-git-7694c7-bloglist1s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://bucolic-brigadeiros-0ca439.netlify.app/">https://bucolic-brigadeiros-0ca439.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
